# auto-clicker

./: CMakeLists.txt  LICENSE  README.md  autoclicker.cpp  autoclicker.h  autoclicker.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/QHotKey/: qhotkey.h
